RESOLVED FIXED101485
[Qt] DumpRenderTree does not honor the shouldDumpPixels boolean argument of dumpAsText
https://bugs.webkit.org/show_bug.cgi?id=101485
Summary [Qt] DumpRenderTree does not honor the shouldDumpPixels boolean argument of d...
Balazs Kelemen
Reported 2012-11-07 10:24:46 PST
All other platforms support it.
Attachments
Patch (4.26 KB, patch)
2012-11-07 10:31 PST, Balazs Kelemen
no flags
Balazs Kelemen
Comment 1 2012-11-07 10:31:19 PST
Csaba Osztrogonác
Comment 2 2012-11-07 10:45:10 PST
Comment on attachment 172831 [details] Patch Good catch, r=me.
Balazs Kelemen
Comment 3 2012-11-07 11:03:16 PST
Comment on attachment 172831 [details] Patch I'm not sure how it will affect tests, so I'm going to land it tomorrow.
Balazs Kelemen
Comment 4 2012-11-08 01:50:27 PST
Comment on attachment 172831 [details] Patch Clearing flags on attachment: 172831 Committed r133869: <http://trac.webkit.org/changeset/133869>
Balazs Kelemen
Comment 5 2012-11-08 01:50:31 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.