[Qt] DumpRenderTree does not honor the shouldDumpPixels boolean argument of dumpAsText https://bugs.webkit.org/show_bug.cgi?id=101485

Reviewed by Csaba Osztrogonác.

[Qt] DumpRenderTree does not honor the shouldDumpPixels boolean argument of dumpAsText

Support dumpAsText(true) which means we should not dump a render tree
but should dump pixels. All other platforms already support it.

* DumpRenderTree/qt/DumpRenderTreeQt.cpp:
(WebCore::DumpRenderTree::dump):
* DumpRenderTree/qt/TestRunnerQt.cpp:
(TestRunner::reset):
(TestRunner::dumpAsText):
* DumpRenderTree/qt/TestRunnerQt.h:
(TestRunner::shouldDumpPixels):
(TestRunner):

Canonical link: https://commits.webkit.org/119664@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133869 268f45cc-cd09-0410-ab3c-d52691b4dbfc